[FIX] nice select overflow bug and prevent sidebar from fading in

--- a/app/assets/styles/jobview.css
+++ b/app/assets/styles/jobview.css
@@ -256,6 +256,7 @@ hr {
 
 .nice-select ul {
     width: 20em;
+    max-height: 15em;
 }
 
 .exampleReformat {
